<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBg">

    <TextView
        android:id="@+id/qontaQueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/qontaQueSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_connecting"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/createContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_contact"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/readContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_contact"
        android:textAllCaps="false"/>

</LinearLayout>